--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -32,13 +32,15 @@ attributelink.uniProt.Protein.*.uniprotAccession.imageName=uniprot_logo_link.jpe
 #header.links.software=http://blog.flymine.org/?page_id=39
 
 # examples for the quicksearch
-quickSearch.identifiers = e.g zen, Q9V4E1
+quickSearch.identifiers = e.g fru, LOCMI10439
 
-meta.keywords = microarray, bioinformatics, drosophila, genomics
-meta.description = Integrated queryable database for Drosophila and Anopheles genomics
+
+meta.keywords = rnaseq, expression, locust, locusta migratoria, bioinformatics, genomics
+meta.description = Integrated queryable database for locust genomics
+project.citation = PC Yang, L Hou, XH Wang, L Kang. Core transcriptional signatures of phase change in the migratory locust, Under review
 
 #theme used (themes in intermine/webapp/main/resources/webapp/themes/)
-theme = grey
+theme = green
 
 # galaxy
 ## set to "false" to disable galaxy
@@ -58,16 +60,14 @@ links.blog = http://blog.flymine.org
 
 # search box
 begin.searchBox.title = Search
-begin.searchBox.description = Search FlyMine. Enter <strong>names</strong>, <strong>identifiers</strong> \
+begin.searchBox.description = Search LocustMine. Enter <strong>names</strong>, <strong>identifiers</strong> \
 or <strong>keywords</strong> for genes, proteins, pathways, ontology terms, authors, etc. (e.g. \
-<em>eve</em>, HIPPO_DROME, glycolysis, <em>hb</em> allele).
+scaffold2825, LOCMI13737, Ehbp1).
 
 
 bag.example.identifiers.protein=Q8T3M3,FBpp0081318,FTZ_DROME
 # bag upload examples
-bag.example.identifiers=CG9151, FBgn0000099, CG3629, TfIIB, Mad, CG1775, CG2262, TWIST_DROME, \
-tinman, runt, E2f, CG8817, FBgn0010433, CG9786, CG1034, ftz, FBgn0024250, FBgn0001251, tll, \
-CG1374, CG33473, ato, so, CG16738, tramtrack,  CG2328, gt
+bag.example.identifiers= LOCMI16347 LOCMI16859 LOCMI00179 LOCMI05640 LOCMI06645 LOCMI09254 LOCMI07033 LOCMI10440 LOCMI10438 LOCMI10442 LOCMI10439 LOCMI10441 LOCMI15651 LOCMI00928 LOCMI02528 LOCMI06679 LOCMI06680 LOCMI06678 LOCMI00967 LOCMI01829 
 
 # list upload box
 begin.listBox.title = Analyse
@@ -77,30 +77,30 @@ begin.listBox.description = Enter a <strong>list</strong> of identifiers.
 # third box
 begin.thirdBox.title = First Time Here?
 begin.thirdBox.visitedTitle = Welcome Back!
-begin.thirdBox.description = FlyMine integrates many types of data for <em>Drosophila</em>, \
-<em>Anopheles</em> and other organisms. You can run flexible queries, export results and analyse lists of \
-data.
+begin.thirdBox.description = LocustMine integrates many types of data for <em>Locusta migratoria</em>
 begin.thirdBox.link = http://www.flymine.org/help/tour/start.html
 begin.thirdBox.linkTitle = Take a tour
 
 
 # popular templates in tabs, template category (key identifier)
 begin.tabs.1.id = Genes
-begin.tabs.1.description = The gene models and other genome annotation in FlyMine are provided by a variety \
-of source databases including: FlyBase, UniProt, Ensembl and over 30 other data sources.
+begin.tabs.1.description = The gene models and other genome annotation in LocustMine are produced from Locust Genome Project
+
 begin.tabs.2.id = Interactions
-begin.tabs.2.description = FlyMine loads physical interactions from IntAct and BioGRID and genetic \
-interactions from FlyBase.
+begin.tabs.2.description = LocustMine loads predicted protein protein interaction from homology evidence, co-expression networks from WGCNA method.
+
 begin.tabs.3.id = Homology
-begin.tabs.3.description = FlyMine loads homologue predictions from Ensembl, KEGG and TreeFam.
+begin.tabs.3.description = LocustMine loads homologue predictions based on InParanoid
+
 begin.tabs.4.id = Function
-begin.tabs.4.description = FlyMine loads Gene Ontology annotation from MGI, FlyBase, WormBase, UniProt, \
-SGD, and InterPro; domain data from InterPro; disease data from OMIM; and pathways data from Reactome and KEGG.
+begin.tabs.4.description = LocustMine loads functional annotation from Locust Genome Project
+
 begin.tabs.5.id = Regulation
-begin.tabs.5.description = FlyMine loads transcriptional regulation data from FlyBase and REDFly.
+begin.tabs.5.description = LocustMine loads transcriptional regulation data from transcriptional regulatory network (TRN) constructed from large number of transcriptome profiles with aggregating eight TRN reconstruction methods.
+
 begin.tabs.6.id = Expression
-begin.tabs.6.description = FlyMine loads gene expression data for Drosophila melanogaster and Anopheles \
-gambiae from FlyAtlas, BDGP, ArrayExpress and Fly-FISH.
+begin.tabs.6.description = LocustMine loads various gene expression data from our laboratory.
+
 
 begin.listsBox.description = You can run queries on whole lists of data. Create lists from the results of a query \
 or by uploading identifiers. Click on a list to view graphs and summaries in a list analysis page, if you log in \
@@ -114,20 +114,20 @@ genomicRegionSearch.resultsJavascript =
 genomicRegionSearch.optionsCss =
 genomicRegionSearch.resultsCss =
 # Make sure pre-defined organisms have chromosome location information in the database
-genomicRegionSearch.defaultOrganisms = P. falciparum 3D7
+genomicRegionSearch.defaultOrganisms = Locusta migratoria
 # Exclude feature types for all organisms, comma separated
 genomicRegionSearch.featureTypesExcluded.global = YouNameItClass
 # Exclude feature types for each specific organism
-genomicRegionSearch.featureTypesExcluded.byOrganism = P. falciparum 3D7:YouNameItClass;
-genomicRegionSearch.defaultSpans = MAL1:29733..37349\\nMAL1:393758..394189\\nMAL9:1495567..1503324
-genomicRegionSearch.caption = Search for features that overlap a list of genome coordinates you enter or upload, e.g. <b>MAL1:29733..37349</b>
+genomicRegionSearch.featureTypesExcluded.byOrganism = Locusta migratoria:YouNameItClass;
+genomicRegionSearch.defaultSpans = scaffold4976:30000..1410112\\nscaffold2825:341334..2352886\\nscaffold1775:232794..2014463
+genomicRegionSearch.caption = Search for features that overlap a list of genome coordinates you enter or upload, e.g. <b>scaffold1775:232794..2014463</b>
 
 genomicRegionSearch.howTo = <ul>\
                                 <li>Genome regions in the following formats are accepted:\
                                     <ul>\
-                                        <li><b>chromosome:start..end</b>, e.g. <i>MAL1:29733..37349</i></li>\
-                                        <li><b>chromosome:start-end</b>, e.g. <i>MAL1:29733-37349</i></li>\
-                                        <li><b>tab delimited</b></li>\
+																		<li><b>chromosome:start..end</b>, e.g. <i>scaffold1775:232794..2014463</i></li>\
+																		<li><b>chromosome:start-end</b>, e.g. <i>scaffold1775:232794-2014463</i></li>\
+																<li><b>tab delimited</b></li>\
                                     </ul>\
                                 <li>Both <b>base coordinate</b> (e.g. BLAST, GFF/GFF3) and <b>interbase coordinate</b> (e.g. UCSC BED, Chado) systems are supported, users need to explicitely select one. By default, the base coordinate is selected.</li>\
                                 <li>Each genome region needs to take a <b>new line</b>.</li>\
@@ -135,6 +135,7 @@ genomicRegionSearch.howTo = <ul>\
 
 genomicRegionSearch.query.Gene.views = {0}.primaryIdentifier,{0}.symbol,{0}.chromosomeLocation.locatedOn.primaryIdentifier,{0}.chromosomeLocation.start,{0}.chromosomeLocation.end,{0}.organism.shortName
 genomicRegionSearch.query.Gene.sortOrder = {0}.chromosomeLocation.start asc
+genomicRegionSearch.initBatchSize = 10000
 # if liftOver is true, don't forget to add liftOver relevant properties to struts-config-form-model.xml
 genomicRegionSearch.liftOver = false
 genomicRegionSearch.liftOver.url =
@@ -145,3 +146,9 @@ genomicRegionSearch.exportChromosomeSegment = true
 #    <form-property name="strandSpecific" type="java.lang.Boolean"/>
 # </form-bean>
 genomicRegionSearch.enableStrandSpecificSearch = true
+
+##configure JBrowse
+org.intermine.webservice.server.jbrowse.genomic.track.Gene.class=Gene
+org.intermine.webservice.server.jbrowse.genomic.track.CDS.class=CDS
+org.intermine.webservice.server.jbrowse.genomic.track.Transcript.class=Transcript
+
