--- a/webapp/src/main/resources/model.properties
+++ b/webapp/src/main/resources/model.properties
@@ -1,7 +1,8 @@
 # Model specific internationalisation properties
 # this file merges with InterMineWebApp.properties
 
-funding = InterMine is funded by the <a href="http://www.wellcome.ac.uk/" target="_new" title="Wellcome Trust"><img src="images/wellcome-ico.png" border="0" /></a> and interoperation is funded by <a href="http://www.nih.gov/" target="_new" title="US National Institutes of Health"><img src="images/logo_nih.gif" height="30px" width="257px" border="0" /></a>
+funding = LocustMine is funded by <a href="http://www.nsfc.gov.cn/" target="_new" title="National Natural Science Foundation of China"><img src="images/NSFC.jpg" height="75px" width="80.7px" border="0" /></a>
+
 
 fasta.export.classes = SequenceFeature,Protein
 
@@ -9,3 +10,8 @@ exporter.galaxy.description = Export to Galaxy
 exporter.sequence.description=Export in FASTA format
 exporter.gff3.description=Export in GFF3 format
 exporter.bed.description=Export in BED format
+
+jbrowse.install.url = http://locustmine.org/jbrowse/JBrowse-1.16.4
+
+menu.blast = BLAST
+menu.jbrowse = JBrowse
