--- a/webapp/src/main/webapp/WEB-INF/web.properties
+++ b/webapp/src/main/webapp/WEB-INF/web.properties
@@ -37,7 +37,7 @@ quickSearch.identifiers = e.g fru, LOCMI10439
 
 meta.keywords = rnaseq, expression, locust, locusta migratoria, bioinformatics, genomics
 meta.description = Integrated queryable database for locust genomics
-project.citation = PC Yang, L Hou, XH Wang, L Kang. Core transcriptional signatures of phase change in the migratory locust, Under review
+project.citation = <a href="http://www.ncbi.nlm.nih.gov/pubmed/31292921" target="_blank">PC Yang, L Hou, XH Wang, L Kang. Core transcriptional signatures of phase change in the migratory locust, Protein Cell. doi.org/10.1007/s13238-019-0648-6</a>
 
 #theme used (themes in intermine/webapp/main/resources/webapp/themes/)
 theme = green
@@ -151,4 +151,13 @@ genomicRegionSearch.enableStrandSpecificSearch = true
 org.intermine.webservice.server.jbrowse.genomic.track.Gene.class=Gene
 org.intermine.webservice.server.jbrowse.genomic.track.CDS.class=CDS
 org.intermine.webservice.server.jbrowse.genomic.track.Transcript.class=Transcript
+
+
+org.intermine.webservice.server.jbrowse.genomic.track.Gene.inferCdsParts=false
+
+jbrowse.install.url = http://insectmine.org/jbrowse/
+
+heatmap.expressionScoreDescription = Expression score description
+heatmap.expressionScoreSummary = Expression summary
+heatmap.expressionScoreTitle = Gene expression from RNAseq of six developmental stages, 8 tissues and phase transition time course at 6 time points
 
